--- a/requirements.txt
+++ b/requirements.txt
@@ -13,6 +13,7 @@ decorator==4.4.0
 Flask==1.0.2
 Flask-Assets==0.12
 Flask-Compress==1.4.0
+flask_sqlalchemy
 idna==2.8
 ipython-genutils==0.2.0
 itsdangerous==1.1.0
