--- a/requirements.txt
+++ b/requirements.txt
@@ -14,6 +14,7 @@ Flask==1.0.2
 Flask-Assets==0.12
 Flask-Compress==1.4.0
 flask_sqlalchemy
+flask_httpauth
 idna==2.8
 ipython-genutils==0.2.0
 itsdangerous==1.1.0
